force-app/main/default/objects/AgriEdge_OrderItem__c/AgriEdge_OrderItem__c.object-meta.xml
<CustomObject>
    <description>Stores line items for AgriEdge orders.</description>
    <label>AgriEdge OrderItem</label>
    <nameField>
        <label>Order Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AgriEdge OrderItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>