force-app/main/default/objects/AgriEdge_OrderItem__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Order</label>
    <referenceTo>AgriEdge_Order__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>OrderItems</relationshipName>
    <required>true</required>
    <type>MasterDetail</type>
</CustomField>