force-app/main/default/objects/AgriEdge_OrderItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>AgriEdge Order Items</relationshipLabel>
    <relationshipName>AgriEdgeOrderItems</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>