force-app/main/default/objects/AgriEdge_OrderItem__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <precision>16</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>